--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -19,7 +19,7 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-lg btn-primary rounded-pill">Submit</button>
+            <button type="submit" class="btn btn-lg btn-outline-primary rounded-pill">Submit</button>
         </form>
 
         <hr>
