--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -10,9 +10,7 @@
 }
 
 <div class="container mt-4">
-        <h1>Manage your account</h1>
-
-        <h2>Change your account settings</h2>
+        <h1>Account Settings</h1>
         <hr />
 
         <div class="row">
