--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -51,7 +51,7 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <div>
-                <button id="registerSubmit" type="submit" class="btn btn-lg btn-primary rounded-pill">Register</button>
+                <button id="registerSubmit" type="submit" class="btn btn-lg btn-outline-primary rounded-pill">Register</button>
             </div>
 
             <hr>
