--- a/Views/Companies/ManageUserRoles.cshtml
+++ b/Views/Companies/ManageUserRoles.cshtml
@@ -7,6 +7,8 @@
     ViewData["Title"] = "Manage Roles";
 }
 
+<!-- Manage User Roles View -->
+
 <!-- DataTable -->
 <link rel="stylesheet" href="~/vendors/dataTable/datatables.min.css" type="text/css">
 
