--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,6 +8,8 @@
     //Layout = "/Views/Shared/_LayoutLanding.cshtml";
 }
 
+<!-- Home Index -->
+
 <div class="page-header d-md-flex justify-content-between">
     <div>
         <h3>Welcome back, @btUser.FullName!</h3>
