--- a/Views/Invites/Create.cshtml
+++ b/Views/Invites/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Send Invite";
 }
 
+<!-- Create an Invite -->
+
 <div class="page-header">
     <div>
         <h3>Company Invite</h3>
