--- a/Views/Invites/ProcessInvite.cshtml
+++ b/Views/Invites/ProcessInvite.cshtml
@@ -5,6 +5,8 @@
     Layout = "/Views/Shared/_LoginLayout.cshtml";
 }
 
+<!-- Process an Invite -->
+
 <body class="bg-white">
     <div class="w-50 m-auto">
         <!-- email template -->
