--- a/Views/Notifications/Index.cshtml
+++ b/Views/Notifications/Index.cshtml
@@ -8,6 +8,8 @@
     ViewData["Title"] = "All Notifications";
 }
 
+<!-- All Notifications -->
+
 <!-- DataTable -->
 <link rel="stylesheet" href="~/vendors/dataTable/datatables.min.css" type="text/css">
 
