--- a/Views/Projects/Edit.cshtml
+++ b/Views/Projects/Edit.cshtml
@@ -7,6 +7,8 @@
     ViewData["Title"] = "Edit Project";
 }
 
+<!-- Edit a Project -->
+
 <!-- Select2 -->
 <link rel="stylesheet" href="~/vendors/select2/css/select2.min.css" type="text/css">
 
@@ -20,6 +22,9 @@
                 </li>
                 <li class="breadcrumb-item">
                     <a asp-action="AllProjects">Projects</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a asp-action="Details" asp-route-id="@Model.Id">Project Details</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">Edit a Project</li>
             </ol>
@@ -74,18 +79,13 @@
                         <select asp-for="ProjectPriorityId" class="projPriorityList" asp-items="ViewBag.ProjectPriorityId"></select>
                         <span asp-validation-for="ProjectPriorityId" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
-                        <div class="d-flex justify-content-end">
-                            <input type="submit" value="Save" class="btn btn-outline-primary rounded-pill" />
-                        </div>
-                    </div>
                 </div>
              </div>
+            <div class="d-flex justify-content-center">
+                <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-primary rounded-pill mx-3">Back to Project Details</a>
+                <input type="submit" value="Save" class="btn btn-outline-primary rounded-pill" />
+            </div>
         </form>
-        <div>
-            <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-primary rounded-pill mx-2">Back to Project Details</a>
-            <a asp-action="AllProjects" class="btn btn-outline-primary rounded-pill">Back to Projects</a>
-        </div>
     </div>
 </div>
 
