--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -123,6 +123,7 @@
                                 </a>
                             </li>
 
+                            <!-- Notifications -->
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link nav-link-notify" title="Notifications" data-toggle="dropdown">
                                     <i data-feather="bell"></i>
