--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -1,30 +1,66 @@
 ﻿@model BugTrackerMVC.Models.Ticket
 @using BugTrackerMVC.Models.Enums
 @using BugTrackerMVC.Services.Interfaces
+@using Microsoft.AspNetCore.Identity
 @inject IBTFileService _BTFileService
 @inject IBTTicketHistoryService _BTTicketHistoryService
+@inject UserManager<BTUser> _UserManager
 
 @{
     ViewData["Title"] = "Details";
+    string btUser = _UserManager.GetUserId(User);
 }
+
+<!-- Ticket Details -->
+
+<div class="page-header">
+    <div>
+        <h3>Ticket Details</h3>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a asp-action="Index" asp-controller="Home">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a asp-action="AllTickets">Tickets</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Ticket Details</li>
+            </ol>
+        </nav>
+    </div>
+</div>
 
 <div>
     <div classxfont-weighteighteightgetainer-fluid">
         <div class="row gy-2">
-            <div class="col-md-12 col">
+            <div class="col-md-12 col-12">
                 <div class="row col-cols-2 mt-5">
-                    <h1>Ticket Details</h1>
-
-                    <div class="d-flex justify-content-end my-2">
-                        <a asp-action="AllTickets" class="btn btn-primary rounded-pill">Back to List</a>
-                    </div>
 
                     <div class="card col m-1 p-2">
                         <div class="card-body">
                             @*Title of Ticket*@
-                            <h5>@Model.Title</h5>
+                            <h2>Ticket: @Model.Title</h2>
+                            @if ((User.IsInRole(nameof(BTRoles.Admin)) || Model.SubmitterUserId == btUser || Model.DeveloperUserId == btUser))
+                            {
+                                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-sm btn-outline-primary rounded-pill my-2">Edit This Ticket</a>
+
+                                @if (User.IsInRole(nameof(BTRoles.Admin)))
+                                {
+                                    @if (Model.Archived == false)
+                                    {
+                                        <a asp-action="Archive" asp-route-id="@Model.Id" class="btn btn-sm btn-outline-danger rounded-pill my-2">Archive This Project</a>
+                                    }
+                                    else
+                                    {
+                                        <a asp-action="Restore" asp-route-id="@Model.Id" class="btn btn-sm btn-outline-success rounded-pill my-2">Restore This Project</a>
+                                    }
+                                }
+                            }
+                            @*Title of Project*@
+                            <h5>Project: @Model.Project.Name</h5>
+                            <a asp-action="Details" asp-controller="Projects" asp-route-id="@Model.ProjectId" class="btn btn-sm btn-outline-primary rounded-pill my-2">Go to Project Details</a>
                             @*Description of Ticket*@
-                            <p>@Model.Description</p>
+                            <p>Description: @Model.Description</p>
                             <div class="progress-container progress-info m-b-25">
                                 <span class="progress-badge" style="font-size:small">Project Status</span>
                                 <div class="progress">
@@ -35,7 +71,7 @@
                                         var today = DateTime.Now;
                                         var percent = today >= end ? 100 : today < start ? 0 : Math.Round((today.Subtract(start)) / (end.Subtract(start)) * 100);
                                     }
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: @percent%;">
+                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: @percent%;">
                                         @* Use Progress Bar code variable here *@
                                         <span class="progress-value">@percent%</span>
                                     </div>
@@ -57,13 +93,30 @@
                                 <li><strong>Priority:</strong> <span class="">  @Model.TicketPriority!.Name</span></li>
                                 @*Ticket status*@
                                 <li><strong>Status:</strong> <span class="">  @Model.TicketStatus!.Name</span></li>
+                                @*Ticket submitter*@
+                                <li><strong>Submitted By:</strong> <span class="">  @Model.SubmitterUser!.FullName</span></li>
+                                @*Ticket developer*@
+                                <li>
+                                    <strong>Assigned To:</strong> <span class="">  @(Model.DeveloperUser?.FullName ?? "No Developer Assigned")</span>
+                                    @if (@Model.DeveloperUserId is null && User.IsInRole(nameof(BTRoles.ProjectManager)))
+                                    {
+                                        <a class="btn btn-outline-info rounded-pill mx-2" asp-action="AssignDeveloper" asp-route-id="@Model.Id">Assign Developer</a>
+                                    }
+                                    else
+                                    {
+                                        @if (User.IsInRole(nameof(BTRoles.ProjectManager)))
+                                        {
+                                            <a class="btn btn-outline-secondary rounded-pill mx-2" asp-action="AssignDeveloper" asp-route-id="@Model.Id">Change Developer</a>
+                                        }
+                                    }
+                                </li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-8 col col-cols-2 mt-5 ">
+            <div class="col-md-8 col-12 col-cols-2 mt-5 ">
                 <div class="col">
                     <div>
                         <div class="card m-1 p-2">
@@ -89,7 +142,7 @@
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="">
-                                                        <input name="submit" type="submit" id="submit" class="btn btn-primary rounded-pill my-2" value="Post">
+                                                        <input name="submit" type="submit" id="submit" class="btn btn-outline-primary rounded-pill my-2" value="Post">
                                                     </div>
                                                 </div>
                                             </div>
@@ -155,7 +208,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-12">
                     <div>
                         <div class="card m-1 p-2">
                             <div class="card-header">
@@ -179,7 +232,7 @@
                                                 <label class="btn btn-outline-primary btn-sm">
                                                     <input asp-for="@Model.Attachments.FirstOrDefault()!.FormFile" type="file" class="form-control-file" />
                                                 </label>
-                                                <button type="submit" class="btn btn-outline-secondary btn-sm md-btn-flat my-2">Submit</button>
+                                                <button type="submit" class="btn btn-outline-secondary btn-sm md-btn-flat rounded-pill my-2">Submit</button>
                                             </div>
                                         </form>
                                     </div>
@@ -216,7 +269,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col mt-5 ">
+            <div class="col-md-4 col-12 mt-5 ">
                 <div>
                     <div class="card m-1 p-2">
                         <div class="card-header">
