--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -29,25 +29,45 @@
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="form-group d-flex justify-content-between">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" checked="" asp-for="Input.RememberMe">
+                        <label class="custom-control-label" asp-for="Input.RememberMe">Remember me</label>
                     </div>
                     <a id="forgot-password" asp-page="./ForgotPassword">Reset password</a>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="btn btn-lg btn-primary rounded-pill">Log in</button>
+                    <button id="login-submit" type="submit" class="btn btn-lg btn-outline-primary rounded-pill">Log in</button>
                 </div>
 
                 <hr>
                 <p class="text-muted">Don't have an account?</p>
                 <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-outline-light btn-sm rounded-pill">Register now!</a>
-                
+
             </form>
         </section>
         <!-- ./ form -->
+
+        <section>
+            <hr />
+            <p class="text-muted">Or use one of the Demo Accounts to log in. </p>
+
+            <div class="mb-1 text-center">
+                <form class="" id="account" method="post">
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-12 col-lg-6">
+                                <button type="submit" style="width:inherit;height:min-content" class="btn btn-outline-light btn-sm rounded-pill p-10 m-2" name="demoEmail" value="DemoAdminEmail">Demo Admin</button>
+                                <button type="submit" style="width:inherit;height:min-content" class="btn btn-outline-light btn-sm rounded-pill p-10 m-2" name="demoEmail" value="DemoPMEmail">Demo PM</button>
+                            </div>
+                            <div class="col-12 col-lg-6">
+                                <button type="submit" style="width:inherit;height:min-content" class="btn btn-outline-light btn-sm rounded-pill p-10 m-2" name="demoEmail" value="DemoDevEmail">Demo Developer</button>
+                                <button type="submit" style="width:inherit;height:min-content" class="btn btn-outline-light btn-sm rounded-pill p-10 m-2" name="demoEmail" value="DemoSubEmail">Demo Submitter</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </section>
 
     </div>
 
