--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,28 +5,35 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
+<div class="card">
+    <div class="card-body">
+        <h6 class="card-title">Change Password</h6>
+
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" />
-                <label asp-for="Input.OldPassword" class="form-label"></label>
-                <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="form-floating">
+                        <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" />
+                        <label asp-for="Input.OldPassword" class="form-label"></label>
+                        <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating my-2">
+                        <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                        <label asp-for="Input.NewPassword" class="form-label"></label>
+                        <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating my-2">
+                        <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                        <label asp-for="Input.ConfirmPassword" class="form-label"></label>
+                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn btn-outline-primary rounded-pill my-2">Update password</button>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating my-2">
-                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.NewPassword" class="form-label"></label>
-                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
-            </div>
-            <div class="form-floating my-2">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword" class="form-label"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary rounded-pill my-2">Update password</button>
         </form>
     </div>
 </div>
