--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -54,7 +54,7 @@
                     <div class="form-group">
                         <label asp-for="Input.ImageFileData" style="width: 100%;">Upload a Profile Image</label>
 
-                        <img id="userImage" class="img-fluid img-thumbnail rounded" src="@_BTFileService.ConvertByteArrayToFile(Model.Input.ImageFileData!, Model.Input.ImageFileType!, (int)DefaultImg.BTUserImg)" alt="bt user picture">
+                        <img id="userImage" class="img-fluid img-thumbnail rounded" src="@_BTFileService.ConvertByteArrayToFile(Model.Input.ImageFileData!, Model.Input.ImageFileType!, (int)DefaultImg.BTUserImg)" style="max-width: 100px;" alt="bt user picture">
 
                         <input asp-for="Input.ImageFormFile" type="file" class="form-control" accept=".png,.jpg,.jpeg,.gif"
                                style="border:0px!important;padding: 0px;padding-top: 10px;padding-bottom: 30px;"
@@ -63,7 +63,7 @@
                         <span asp-validation-for="Input.ImageFormFile" class="text-danger"></span>
                     </div>
                     <div class="d-flex justify-content-end">
-                        <button id="update-profile-button" type="submit" class="btn btn-lg btn-primary rounded-pill my-2">Save</button>
+                        <button id="update-profile-button" type="submit" class="btn btn-outline-primary rounded-pill my-2">Save</button>
                     </div>
                 </div>
             </div>
