--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -7,6 +7,8 @@
     ViewData["Title"] = "Create Project";
 }
 
+<!-- Create a Project -->
+
 <!-- Select2 -->
 <link rel="stylesheet" href="~/vendors/select2/css/select2.min.css" type="text/css">
 
@@ -73,17 +75,12 @@
                         <label asp-for="ProjectPriorityId" class="control-label">Priority</label>
                         <select asp-for="ProjectPriorityId" class="projPriorityList" asp-items="ViewBag.ProjectPriorityId"></select>
                     </div>
-                    <div class="form-group">
-                        <div class="d-flex justify-content-end">
-                            <input type="submit" value="Create" class="btn btn-outline-primary rounded-pill" />
-                        </div>
-                    </div>
                 </div>
             </div>
+            <div class="d-flex justify-content-center">
+                <input type="submit" value="Create" class="btn btn-outline-primary rounded-pill" />
+            </div>
         </form>
-        <div>
-            <a asp-action="AllProjects" class="btn btn-outline-primary rounded-pill">Back to Projects</a>
-        </div>
     </div>
 </div>
 
