--- a/Views/Projects/Restore.cshtml
+++ b/Views/Projects/Restore.cshtml
@@ -12,6 +12,28 @@
     string btUser = _UserManager.GetUserId(User);
 }
 
+<!-- Restore Project -->
+
+<div class="page-header">
+    <div>
+        <h3>Restore Project</h3>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a asp-action="Index" asp-controller="Home">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a asp-action="ArchivedProjects">Archived Projects</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a asp-action="Details" asp-route-id="@Model.Id">Project Details</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Restore Project<li>
+            </ol>
+        </nav>
+    </div>
+</div>
+
 <div class="row">
     <div class="col-12 col-md-8 offset-md-2">
         <h2>Are you sure?</h2>
@@ -57,88 +79,8 @@
         </div>
         <form class="d-flex justify-content-between" asp-action="Restore" asp-route-id="@Model.Id">
             <input hidden asp-for="Id" />
-            <a asp-action="ArchivedProjects" asp-controller="Projects" class="btn btn-outline-secondary rounded-pill btnLink">Back to Archived Projects</a>
-            <button type="submit" class="btn btn-outline-success rounded-pill btnLink">Restore</button>
+            <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-primary rounded-pill">Back to Project Details</a>
+            <button type="submit" class="btn btn-outline-success rounded-pill">Restore</button>
         </form>
     </div>
 </div>
-
-@*<div>
-    <h1>Restore</h1>
-    <h3>Are you sure you want to restore this project?</h3>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Created)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageFileType)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ImageFileType)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Archived)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Archived)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Company)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Company!.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Members)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Members)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tickets)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tickets)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProjectPriority)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProjectPriority!.Name)
-        </dd>
-    </dl>
-
-    <form asp-action="Restore" method="post">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Restore" class="btn btn-success rounded-pill" /> |
-        <a asp-action="ArchivedProjects">Back to List</a>
-    </form>
-</div>*@
