--- a/Views/Tickets/AssignDeveloper.cshtml
+++ b/Views/Tickets/AssignDeveloper.cshtml
@@ -5,32 +5,37 @@
     ViewData["Title"] = "Assign Developer";
 }
 
-<div class="container mt-5">
+<!-- Assign Developer -->
 
-    <div class="d-flex justify-content-center mt-5 flex-column align-items-center">
+<div class="d-flex justify-content-center mt-5 flex-column align-items-center">
 
-        <h3 class="my-5">Assign Developer</h3>
-        <div class="card">
-            <div class="card-header">
-                <div class="card-title">@Model.Ticket!.Title</div>
-            </div>
-            <div class="card-body">
-                <form asp-action="AssignDeveloper" method="post" class="d-flex flex-column">
-                    <input type="hidden" asp-for="Ticket!.Id" />
-                    <select asp-items="Model.DevList" asp-for="DevId">
-                        <option value="">Unassigned</option>
-                    </select>
-                    <button type="submit" class="btn btn-primary my-3">Save</button>
-                    <a asp-action="Details" asp-route-id="@Model.Ticket!.Id" class="btn btn-secondary my-3">Cancel</a>
-                </form>
+    <h3 class="my-5">Assign Developer</h3>
+    <div class="card">
+        <div class="card-header">
+            <div class="card-title">Ticket: @Model.Ticket!.Title</div>
+            <div class="card-title">Project: @Model.Ticket!.Project!.Name</div>
+        </div>
+        <div class="card-body">
+            <form asp-action="AssignDeveloper" method="post" class="d-flex flex-column">
+                <input type="hidden" asp-for="Ticket!.Id" />
+                <select asp-items="Model.DevList" asp-for="DevId">
+                </select>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn btn-outline-primary rounded-pill my-2">Save</button>
+                </div>
+            </form>
+
+            <div class="row">
+                <div class="d-flex justify-content-center">
+                        <a asp-action="Details" asp-route-id="@Model.Ticket!.Id" class="btn btn-outline-secondary rounded-pill">Back to Ticket Details</a>
+                </div>
             </div>
         </div>
     </div>
-
 </div>
 
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-}
+    }
