--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -4,8 +4,27 @@
     ViewData["Title"] = "Create";
 }
 
+<!-- Create a Ticket -->
+
 <!-- Select2 -->
 <link rel="stylesheet" href="~/vendors/select2/css/select2.min.css" type="text/css">
+
+<div class="page-header">
+    <div>
+        <h3>Create a Ticket</h3>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a asp-action="Index" asp-controller="Home">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a asp-action="AllTickets">Tickets</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Create a Ticket</li>
+            </ol>
+        </nav>
+    </div>
+</div>
 
 <div class="card">
     <div class="card-body">
@@ -17,9 +36,6 @@
             <input type="hidden" asp-for="ArchivedByProject" />
             <input type="hidden" asp-for="DeveloperUserId" />
             <input type="hidden" asp-for="SubmitterUserId" />
-
-            <h1>Create a Ticket</h1>
-            <hr />
 
             <div class="row">
                 <div class="col-12 col-lg-6">
@@ -44,24 +60,19 @@
                         <select asp-for="TicketTypeId" class="ticketList" asp-items="ViewBag.TicketTypeId"></select>
                     </div>
                     <div class="form-group">
-                        <label asp-for="TicketStatusId" class="control-label">Status</label>
-                        <select asp-for="TicketStatusId" class="form-control" disabled asp-items="ViewBag.TicketStatusId"></select>
-                    </div>
-                    <div class="form-group">
                         <label asp-for="TicketPriorityId" class="control-label">Priority</label>
                         <select asp-for="TicketPriorityId" class="ticketList" asp-items="ViewBag.TicketPriorityId"></select>
                     </div>
                     <div class="form-group">
-                        <div class="d-flex justify-content-end">
-                            <input type="submit" value="Create" class="btn btn-primary rounded-pill" />
-                        </div>
+                        <label asp-for="TicketStatusId" class="control-label">Status</label>
+                        <select asp-for="TicketStatusId" class="form-control" disabled asp-items="ViewBag.TicketStatusId"></select>
                     </div>
                 </div>
             </div>
+            <div class="d-flex justify-content-center">
+                <input type="submit" value="Create" class="btn btn-outline-primary rounded-pill" />
+            </div>
         </form>
-        <div>
-            <a asp-action="AllTickets" class="btn btn-primary rounded-pill">Back to List</a>
-        </div>
     </div>
 </div>
 
